// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question Store action:hydrateQuestionStore 1`] = `
Object {
  "data": Object {
    "001": Object {
      "answer": null,
      "answerMsgId": null,
      "error": null,
      "payload": Object {
        "@type": "did:sov:BzCbsNYhMrjHiqZDTUASHg;spec/committedanswer/1.0/answer",
        "forDID": "myPairwiseDid",
        "from_did": "senderDID1",
        "issuer_did": "issuerDid",
        "messageId": "MSG-ID",
        "messageText": "Message Text",
        "messageTitle": "Message Title",
        "question_detail": "Question Detail",
        "question_text": "Question Text",
        "remoteDid": "remoteDid",
        "timing": Object {
          "expires_time": "2017-06-01:05:07:07",
        },
        "uid": "001",
        "valid_responses": Array [
          Object {
            "nonce": "akdfakjfkjdaadkgak",
            "text": "Answer 1",
          },
          Object {
            "nonce": "hyjjjjuifhjkiutyojoh",
            "text": "Answer 2",
          },
        ],
      },
      "status": "RECEIVED",
    },
    "002": Object {
      "answer": null,
      "answerMsgId": null,
      "error": null,
      "payload": Object {
        "@type": "did:sov:BzCbsNYhMrjHiqZDTUASHg;spec/committedanswer/1.0/answer",
        "forDID": "myPairwiseDid",
        "from_did": "senderDID1",
        "issuer_did": "issuerDid",
        "messageId": "MSG-ID-2",
        "messageText": "Hi User,",
        "messageTitle": "Survey request for family members",
        "question_detail": "Some more details regarding question that should scrolled along with some data",
        "question_text": "How many members are in your family",
        "remoteDid": "remoteDid",
        "timing": Object {
          "expires_time": "2017-06-01:05:07:07",
        },
        "uid": "002",
        "valid_responses": Array [
          Object {
            "nonce": "akdfakjfkjdaadkgak",
            "text": "0 to 2 people",
          },
          Object {
            "nonce": "hyjjjjuifhjkiutyojoh",
            "text": "3 to 5 people",
          },
          Object {
            "nonce": "hyjjjjuifhjkiutdsyojoh",
            "text": "6 to 10 people",
          },
        ],
      },
      "status": "RECEIVED",
    },
  },
  "storageStatus": "RESTORE_SUCCESS",
}
`;

exports[`Question Store action:hydrateQuestionStore 2`] = `
Object {
  "data": Object {
    "001": Object {
      "answer": null,
      "answerMsgId": null,
      "error": null,
      "payload": Object {
        "@type": "did:sov:BzCbsNYhMrjHiqZDTUASHg;spec/committedanswer/1.0/answer",
        "forDID": "myPairwiseDid",
        "from_did": "senderDID1",
        "issuer_did": "issuerDid",
        "messageId": "MSG-ID",
        "messageText": "Message Text",
        "messageTitle": "Message Title",
        "question_detail": "Question Detail",
        "question_text": "Question Text",
        "remoteDid": "remoteDid",
        "timing": Object {
          "expires_time": "2017-06-01:05:07:07",
        },
        "uid": "001",
        "valid_responses": Array [
          Object {
            "nonce": "akdfakjfkjdaadkgak",
            "text": "Answer 1",
          },
          Object {
            "nonce": "hyjjjjuifhjkiutyojoh",
            "text": "Answer 2",
          },
        ],
      },
      "status": "RECEIVED",
    },
    "002": Object {
      "answer": null,
      "answerMsgId": null,
      "error": null,
      "payload": Object {
        "@type": "did:sov:BzCbsNYhMrjHiqZDTUASHg;spec/committedanswer/1.0/answer",
        "forDID": "myPairwiseDid",
        "from_did": "senderDID1",
        "issuer_did": "issuerDid",
        "messageId": "MSG-ID-2",
        "messageText": "Hi User,",
        "messageTitle": "Survey request for family members",
        "question_detail": "Some more details regarding question that should scrolled along with some data",
        "question_text": "How many members are in your family",
        "remoteDid": "remoteDid",
        "timing": Object {
          "expires_time": "2017-06-01:05:07:07",
        },
        "uid": "002",
        "valid_responses": Array [
          Object {
            "nonce": "akdfakjfkjdaadkgak",
            "text": "0 to 2 people",
          },
          Object {
            "nonce": "hyjjjjuifhjkiutyojoh",
            "text": "3 to 5 people",
          },
          Object {
            "nonce": "hyjjjjuifhjkiutdsyojoh",
            "text": "6 to 10 people",
          },
        ],
      },
      "status": "RECEIVED",
    },
  },
  "storageStatus": "RESTORE_SUCCESS",
}
`;

exports[`Question Store action:questionReceived 1`] = `
Object {
  "data": Object {
    "001": Object {
      "answer": null,
      "answerMsgId": null,
      "error": null,
      "payload": Object {
        "@type": "did:sov:BzCbsNYhMrjHiqZDTUASHg;spec/committedanswer/1.0/answer",
        "forDID": "myPairwiseDid",
        "from_did": "senderDID1",
        "issuer_did": "issuerDid",
        "messageId": "MSG-ID",
        "messageText": "Message Text",
        "messageTitle": "Message Title",
        "question_detail": "Question Detail",
        "question_text": "Question Text",
        "remoteDid": "remoteDid",
        "timing": Object {
          "expires_time": "2017-06-01:05:07:07",
        },
        "uid": "001",
        "valid_responses": Array [
          Object {
            "nonce": "akdfakjfkjdaadkgak",
            "text": "Answer 1",
          },
          Object {
            "nonce": "hyjjjjuifhjkiutyojoh",
            "text": "Answer 2",
          },
        ],
      },
      "status": "RECEIVED",
    },
  },
  "storageStatus": "IDLE",
}
`;

exports[`Question Store action:sendAnswerToQuestion 1`] = `
Object {
  "data": Object {
    "001": Object {
      "answer": null,
      "answerMsgId": null,
      "error": null,
      "payload": Object {
        "@type": "did:sov:BzCbsNYhMrjHiqZDTUASHg;spec/committedanswer/1.0/answer",
        "forDID": "myPairwiseDid",
        "from_did": "senderDID1",
        "issuer_did": "issuerDid",
        "messageId": "MSG-ID",
        "messageText": "Message Text",
        "messageTitle": "Message Title",
        "question_detail": "Question Detail",
        "question_text": "Question Text",
        "remoteDid": "remoteDid",
        "timing": Object {
          "expires_time": "2017-06-01:05:07:07",
        },
        "uid": "001",
        "valid_responses": Array [
          Object {
            "nonce": "akdfakjfkjdaadkgak",
            "text": "Answer 1",
          },
          Object {
            "nonce": "hyjjjjuifhjkiutyojoh",
            "text": "Answer 2",
          },
        ],
      },
      "status": "RECEIVED",
    },
  },
  "storageStatus": "IDLE",
}
`;

exports[`Question Store action:updateQuestionAnswer 1`] = `
Object {
  "data": Object {
    "001": Object {
      "answer": Object {
        "nonce": "akdfakjfkjdaadkgak",
        "text": "Answer 1",
      },
      "answerMsgId": "answerMsgId",
      "error": null,
      "payload": Object {
        "@type": "did:sov:BzCbsNYhMrjHiqZDTUASHg;spec/committedanswer/1.0/answer",
        "forDID": "myPairwiseDid",
        "from_did": "senderDID1",
        "issuer_did": "issuerDid",
        "messageId": "MSG-ID",
        "messageText": "Message Text",
        "messageTitle": "Message Title",
        "question_detail": "Question Detail",
        "question_text": "Question Text",
        "remoteDid": "remoteDid",
        "timing": Object {
          "expires_time": "2017-06-01:05:07:07",
        },
        "uid": "001",
        "valid_responses": Array [
          Object {
            "nonce": "akdfakjfkjdaadkgak",
            "text": "Answer 1",
          },
          Object {
            "nonce": "hyjjjjuifhjkiutyojoh",
            "text": "Answer 2",
          },
        ],
      },
      "status": "RECEIVED",
    },
  },
  "storageStatus": "IDLE",
}
`;

exports[`Question Store action:updateQuestionStatus 1`] = `
Object {
  "data": Object {
    "001": Object {
      "answer": null,
      "answerMsgId": null,
      "error": null,
      "payload": Object {
        "@type": "did:sov:BzCbsNYhMrjHiqZDTUASHg;spec/committedanswer/1.0/answer",
        "forDID": "myPairwiseDid",
        "from_did": "senderDID1",
        "issuer_did": "issuerDid",
        "messageId": "MSG-ID",
        "messageText": "Message Text",
        "messageTitle": "Message Title",
        "question_detail": "Question Detail",
        "question_text": "Question Text",
        "remoteDid": "remoteDid",
        "timing": Object {
          "expires_time": "2017-06-01:05:07:07",
        },
        "uid": "001",
        "valid_responses": Array [
          Object {
            "nonce": "akdfakjfkjdaadkgak",
            "text": "Answer 1",
          },
          Object {
            "nonce": "hyjjjjuifhjkiutyojoh",
            "text": "Answer 2",
          },
        ],
      },
      "status": "SEND_ANSWER_IN_PROGRESS",
    },
  },
  "storageStatus": "IDLE",
}
`;

exports[`Question Store action:updateQuestionStatus 2`] = `
Object {
  "data": Object {
    "001": Object {
      "answer": null,
      "answerMsgId": null,
      "error": Object {
        "code": "CM-QUE-003",
        "message": "Failed to send answer: HTTP error",
      },
      "payload": Object {
        "@type": "did:sov:BzCbsNYhMrjHiqZDTUASHg;spec/committedanswer/1.0/answer",
        "forDID": "myPairwiseDid",
        "from_did": "senderDID1",
        "issuer_did": "issuerDid",
        "messageId": "MSG-ID",
        "messageText": "Message Text",
        "messageTitle": "Message Title",
        "question_detail": "Question Detail",
        "question_text": "Question Text",
        "remoteDid": "remoteDid",
        "timing": Object {
          "expires_time": "2017-06-01:05:07:07",
        },
        "uid": "001",
        "valid_responses": Array [
          Object {
            "nonce": "akdfakjfkjdaadkgak",
            "text": "Answer 1",
          },
          Object {
            "nonce": "hyjjjjuifhjkiutyojoh",
            "text": "Answer 2",
          },
        ],
      },
      "status": "SEND_ANSWER_FAIL_TILL_CLOUD_AGENT",
    },
  },
  "storageStatus": "IDLE",
}
`;

exports[`Question Store action:updateQuestionStorageStatus 1`] = `
Object {
  "data": Object {
    "001": Object {
      "answer": null,
      "answerMsgId": null,
      "error": null,
      "payload": Object {
        "@type": "did:sov:BzCbsNYhMrjHiqZDTUASHg;spec/committedanswer/1.0/answer",
        "forDID": "myPairwiseDid",
        "from_did": "senderDID1",
        "issuer_did": "issuerDid",
        "messageId": "MSG-ID",
        "messageText": "Message Text",
        "messageTitle": "Message Title",
        "question_detail": "Question Detail",
        "question_text": "Question Text",
        "remoteDid": "remoteDid",
        "timing": Object {
          "expires_time": "2017-06-01:05:07:07",
        },
        "uid": "001",
        "valid_responses": Array [
          Object {
            "nonce": "akdfakjfkjdaadkgak",
            "text": "Answer 1",
          },
          Object {
            "nonce": "hyjjjjuifhjkiutyojoh",
            "text": "Answer 2",
          },
        ],
      },
      "status": "RECEIVED",
    },
  },
  "storageStatus": "RESTORE_START",
}
`;
